objects/Link_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls the visibility of custom pages accessible through Links sidebar</description>
    <fields>
        <fullName>Advanced_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Advanced Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assessment_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assessment Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CSV_Loader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSV Loader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cohort_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cohort Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Communities_SSO_URL__c</fullName>
        <description>The unique URL for Communities SSO to work</description>
        <inlineHelpText>This value differs between test and prod orgs.</inlineHelpText>
        <label>Communities SSO URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communities_SSO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communities Single Sign On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Community_Service_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Community Service Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Complete_Sections__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complete Sections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overall Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Points_Matrix__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Points Matrix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Print_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Print Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProActive_Processor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ProActive Processor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Report_Cards__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Run Report Cards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Setup_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Setup Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Tab_Layout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if the associated profile should have the custom tabbed based student layout.</description>
        <inlineHelpText>Check this field if the associated profile should have the custom tabbed based student layout.</inlineHelpText>
        <label>Student Tab Layout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transfer_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Link to enter transfer courses and grades</description>
        <label>Transfer Wizard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year_Close_Wizard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year Close Wizard</label>
        <type>Checkbox</type>
    </fields>
    <label>Custom Link Settings</label>
</CustomObject>